--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,5 +77,6 @@ jobs:
       - run: go mod download
       - env:
           TF_ACC: "1"
+          NEPTUNE_API_TOKEN: ${{ secrets.NEPTUNE_API_TOKEN }}
         run: go test -v -cover ./internal/provider/
         timeout-minutes: 10
