--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ website/vendor
 
 # Keep windows files with windows line endings
 *.winfile eol=crlf
+
+# Coverage reporting
+cover.html
+cover.out
