add method to update project member permission

--- a/config.json
+++ b/config.json
@@ -22,5 +22,9 @@
     "deleteProjectMember": {
         "endpoint": "api/backend/v1/projects/members",
         "method": "DELETE"
+    },
+    "updateProjectMember": {
+        "endpoint": "api/backend/v1/projects/members",
+        "method": "PATCH"
     }
 }
